--- a/angular.json
+++ b/angular.json
@@ -19,10 +19,8 @@
           "options": {
             "outputPath": "dist/portfolio-manu",
             "index": "src/index.html",
-            "main": "src/main.ts",            
-            "polyfills": [
-              "zone.js"
-            ],
+            "browser": "src/main.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -34,9 +32,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -54,7 +50,7 @@
                 }
               ],
               "outputHashing": "all",
-              "baseHref": "/portfolio-manu/",       
+              "baseHref": "/portfolio-manu/",
               "optimization": true,
               "sourceMap": false,
               "extractLicenses": true
@@ -85,10 +81,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -100,18 +93,17 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         },
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {
-            "baseHref": "/portfolio-manu/",     
-            "name": "Manu PM Portfolio",         
-            "message": "Deploy portfolio to GitHub Pages"
+            "baseHref": "/portfolio-manu/",
+            "name": "Manu PM Portfolio",
+            "message": "Deploy portfolio to GitHub Pages",
+            "dir": "dist/portfolio-manu"  
           }
         }
       }
